--- a/blueocean-rest/pom.xml
+++ b/blueocean-rest/pom.xml
@@ -100,6 +100,7 @@
                                         <allowedImport>hudson.Extension</allowedImport>
                                         <allowedImport>hudson.ExtensionPoint</allowedImport>
                                         <allowedImport>hudson.ExtensionList</allowedImport>
+                                        <allowedImport>hudson.model.Item</allowedImport>
                                     </allowedImports>
                                 </restrictImports>
                             </rules>
