--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -7,8 +7,9 @@
     "lint": "jjsbuilder --tasks lint",
     "lint:fix": "jjsbuilder --tasks lint --fixLint",
     "lint:watch": "jjsbuilder --tasks lint:watch --continueOnLint",
-    "test": "jjsbuilder --tasks test",
-    "test:watch": "jjsbuilder --tasks test:watch",
+    "test": "gulp test",
+    "test:fast": "gulp test:fast",
+    "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
     "bundle": "jjsbuilder --tasks bundle",
     "bundle:watch": "jjsbuilder --tasks bundle:watch",
     "mvnclean": "echo 'clean'",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/js-builder": "0.0.62",
+    "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
     "babel": "6.5.2",
     "babel-core": "6.17.0",
