--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.jenkins.blueocean</groupId>
         <artifactId>blueocean-parent</artifactId>
-        <version>1.3.4</version>
+        <version>1.3.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>blueocean</artifactId>
