feature/JENKINS-38339-downstream-job-links * Move downstream link functionality to nodes rather than runs, and clean up some mess left over. Still need tests and docco and cleanup

--- a/blueocean-pipeline-api-impl/pom.xml
+++ b/blueocean-pipeline-api-impl/pom.xml
@@ -106,6 +106,13 @@
             <artifactId>plain-credentials</artifactId>
         </dependency>
 
+        <!-- Needed to read the "upstreamNode" action -->
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>pipeline-build-step</artifactId>
+            <version>2.6-SNAPSHOT</version>
+        </dependency>
+
         <!-- Test plugins -->
         <dependency>
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
