--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -107,6 +107,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>pipeline-build-step</artifactId>
+            <version>2.6-SNAPSHOT</version>
         </dependency>
 
         <dependency>
