--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -15,7 +15,7 @@
     "test": "gulp test",
     "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
     "test:fast": "gulp test:fast",
-    "mvnbuild": "gulp lint build bundle",
+    "mvnbuild": "gulp clean lint build bundle",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test"
   },
