Hotfix/ath rest impl dep and release jdl (#1589)
* tick up rest-impl dependency in ath

* do not run the "mvclean" npm script anymore - triggering it from initialize means it happens too often / at wrong times

* remove obsolete "mvnclean" npm scripts

* for JDL and core-js, run "clean" from the "mvnbuild" npm script instead

* do NOT delete the "target" dir from gulp build as this can nuke .jar's and other artifacts when the JS build is called unexpectedly from mvn release:prepare or release:perform

--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -10,8 +10,7 @@
     "flow": "flow",
     "lint": "gulp lint",
     "gulp": "gulp build",
-    "mvnclean": "gulp clean",
-    "mvnbuild": "gulp lint build bundle",
+    "mvnbuild": "gulp clean lint build bundle",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test",
     "bundle:watch": "gulp bundle:watch",
