Revert "Hotfix/ath rest impl dep and release jdl (#1589)"
This reverts commit 42188454624628a3fadb88c65b6d6e2984a6df09.

--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -15,7 +15,8 @@
     "test": "gulp test",
     "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
     "test:fast": "gulp test:fast",
-    "mvnbuild": "gulp clean lint build bundle",
+    "mvnclean": "gulp clean",
+    "mvnbuild": "gulp lint build bundle",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test"
   },
