--- a/blueocean-web/package.json
+++ b/blueocean-web/package.json
@@ -9,6 +9,7 @@
     "test:watch": "gulp test:watch",
     "bundle": "gulp bundle",
     "bundle:watch": "gulp bundle:watch",
+    "mvnclean": "echo 'clean'",
     "mvnbuild": "gulp lint bundle && browserify src/main/js/ie/iepolyfills.js > target/classes/org/jenkins/ui/jsmodules/blueocean-web/iepolyfills.js",
     "mvnbuild:fast": "gulp bundle",
     "mvntest": "gulp test"
