--- a/jenkins-design-language/pom.xml
+++ b/jenkins-design-language/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>blueocean-parent</artifactId>
         <groupId>io.jenkins.blueocean</groupId>
-        <version>1.4.0-beta-4</version>
+        <version>1.4.0-beta-5-SNAPSHOT</version>
     </parent>
 
     <artifactId>jenkins-design-language</artifactId>
