--- a/blueocean-core-js/pom.xml
+++ b/blueocean-core-js/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>blueocean-parent</artifactId>
         <groupId>io.jenkins.blueocean</groupId>
-        <version>1.4.0-beta-6-SNAPSHOT</version>
+        <version>1.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>blueocean-core-js</artifactId>
