feature/JENKINS-38339-downstream-job-links-2 * Remove BluePipelineAction, and fix a problem with transitive deps

--- a/blueocean-pipeline-api-impl/pom.xml
+++ b/blueocean-pipeline-api-impl/pom.xml
@@ -111,6 +111,12 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>pipeline-build-step</artifactId>
             <version>2.7-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jenkins-ci.plugins</groupId>
+                    <artifactId>script-security</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Test plugins -->
