--- a/pom.xml
+++ b/pom.xml
@@ -419,11 +419,12 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>pipeline-build-step</artifactId>
-            <!--TODO: remove it by released version once this PR is verified and pipeline-build-step is released -->
-            <version>2.7-20180123.124004-1</version>
+            <version>2.7</version>
         </dependency>
-        <!-- To fix UpperBoundDeps erros caused due to different plugins depending on different versions
-             of script-security plugin
+
+        <!--
+             Need dependency on script-console to fix UpperBoundDeps erros caused due to different plugins depending
+             on different versions of script-security plugin
         -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
