--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <jacoco.missedclass.coverage>0.00</jacoco.missedclass.coverage>
     <hpi.dependencyResolution>runtime</hpi.dependencyResolution>
     <jenkins-test-harness.version>2.30</jenkins-test-harness.version>
-    <scm-api.version>2.2.2</scm-api.version>
+    <scm-api.version>2.2.6</scm-api.version>
     <git.version>3.6.0</git.version>
   </properties>
 
@@ -333,7 +333,14 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>branch-api</artifactId>
-            <version>2.0.11</version>
+            <version>2.0.18</version>
+            <exclusions>
+                <!-- Upper dependency fix: annotation-indexer comes from core, exclude from git -->
+                <exclusion>
+                    <groupId>org.jenkins-ci</groupId>
+                    <artifactId>annotation-indexer</artifactId>
+	    	    </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jenkinsci.plugins</groupId>
@@ -491,7 +498,7 @@
                 <exclusion>
                     <groupId>org.jenkins-ci</groupId>
                     <artifactId>annotation-indexer</artifactId>
-                </exclusion>
+	    	</exclusion>
             </exclusions>
         </dependency>
         <dependency>
