--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,4 +6,4 @@
 pom.xml    @vivek @michaelneale @kzantow
 
 # Jenkins design language is used outside of blue ocean repo, so want to watch changes closely for approval
-jenkins-design-language/*   @kzantow @scherler @cliffmeyers
+jenkins-design-language/*   @kzantow @scherler
