--- a/acceptance-tests/src/test/resources/io/blueocean/ath/offline/multibranch/ParallelNavigationTest/Jenkinsfile
+++ b/acceptance-tests/src/test/resources/io/blueocean/ath/offline/multibranch/ParallelNavigationTest/Jenkinsfile
@@ -2,9 +2,11 @@ node {
 
     stage("parallel") {
       parallel firstBranch: {
+          echo 'first branch visible'
           sh 'ping -c 30 localhost'
 
       }, secondBranch: {
+          echo 'second branch visible'
           sh 'ping -c 30 localhost'
       }
 
