--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -11,8 +11,9 @@
     "lint": "jjsbuilder --tasks lint",
     "lint:fix": "jjsbuilder --tasks lint --fixLint",
     "lint:watch": "jjsbuilder --tasks lint:watch --continueOnLint",
-    "test": "jjsbuilder --tasks test",
-    "test:watch": "jjsbuilder --tasks test:watch",
+    "test": "gulp test",
+    "test:fast": "gulp test:fast",
+    "test:debug": "node --debug-brk ./node_modules/.bin/gulp test:debug",
     "bundle": "jjsbuilder --tasks bundle",
     "bundle:watch": "jjsbuilder --tasks bundle:watch",
     "mvnbuild": "jjsbuilder --tasks lint,bundle",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/js-builder": "0.0.62",
+    "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
     "babel": "6.5.2",
     "babel-core": "6.17.0",
@@ -56,6 +58,8 @@
     "mobx-utils": "1.1.2",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
+    "react-dnd": "2.5.4",
+    "react-dnd-html5-backend": "2.5.4",
     "react-dom": "15.4.2",
     "react-router": "2.8.1"
   },
