--- a/blueocean-personalization/package.json
+++ b/blueocean-personalization/package.json
@@ -29,6 +29,7 @@
     "babel": "6.5.2",
     "babel-core": "6.17.0",
     "babel-eslint": "7.0.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
@@ -50,33 +51,27 @@
     "@jenkins-cd/design-language": "0.0.158",
     "@jenkins-cd/js-extensions": "0.0.42",
     "@jenkins-cd/js-modules": "0.0.10",
-    "immutable": "3.8.1",
-    "keymirror": "0.1.1",
-    "react-i18next": "1.10.1",
-    "react-redux": "4.4.5",
+    "mobx": "2.6.0",
+    "mobx-react": "3.5.7",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
     "react-dom": "15.4.2",
-    "react-router": "2.8.1",
-    "redux": "3.6.0",
-    "redux-thunk": "2.1.0",
-    "reselect": "2.5.4"
+    "react-i18next": "1.10.1",
+    "react-router": "2.8.1"
   },
   "jenkinscd": {
     "import": [
       "@jenkins-cd/blueocean-core-js@any",
       "@jenkins-cd/design-language@any",
       "@jenkins-cd/js-extensions@any",
-      "immutable@any",
-      "keymirror@any",
+      "mobx@any",
+      "mobx-react@any",
       "moment@any",
       "moment-duration-format@any",
       "react@any",
       "react-addons-css-transition-group@any",
       "react-dom@any",
-      "react-redux@any",
-      "react-router@any",
-      "redux-thunk@any"
+      "react-router@any"
     ]
   }
 }
