--- a/pom.xml
+++ b/pom.xml
@@ -423,7 +423,7 @@
         </dependency>
 
         <!--
-             Need dependency on script-console to fix UpperBoundDeps erros caused due to different plugins depending
+             Need dependency on script-console to fix UpperBoundDeps errors caused due to different plugins depending
              on different versions of script-security plugin
         -->
         <dependency>
