--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -50,17 +50,16 @@
     ]
   },
   "dependencies": {
+    "@jenkins-cd/blueocean-material-icons": "0.0.6",
     "@jenkins-cd/js-modules": "0.0.10",
     "linkifyjs": "2.1.4",
     "lodash.debounce": "4.0.8",
-    "moment": "2.15.1",
+    "moment": "2.19.3",
     "moment-duration-format": "1.3.0",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
     "react-dom": "15.4.2",
-    "react-router": "2.8.1",
-    "@jenkins-cd/blueocean-material-icons": "0.0.6"
-
+    "react-router": "2.8.1"
   },
   "devDependencies": {
     "@jenkins-cd/js-builder": "0.0.62",
