--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.170",
     "@jenkins-cd/design-language": "0.0.158",
+    "@jenkins-cd/js-builder": "git+https://github.com/imeredith/js-builder.git#typescript_support",
     "@jenkins-cd/js-extensions": "0.0.42",
     "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/preferences": "0.0.4",
