--- a/acceptance-tests/pom.xml
+++ b/acceptance-tests/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>com.offbytwo.jenkins</groupId>
             <artifactId>jenkins-client</artifactId>
-            <version>0.3.7</version>
+            <version>0.3.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.kohsuke</groupId>
