Fix if statement

--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/js-builder": "git+https://github.com/imeredith/js-builder.git#typescript_support",
-    "@jenkins-cd/js-builder-jest": "git+https://github.com/imeredith/js-builder-jest.git#typescript_support",
+    "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
     "@types/react": "15.6.14",
     "babel": "6.5.2",
@@ -44,12 +44,16 @@
     "eslint-plugin-react": "4.3.0",
     "gulp": "3.9.1",
     "gulp-mocha": "3.0.1",
+    "jest": "19.0.2",
     "jest-cli": "22.4.2",
     "mocha": "3.1.0",
     "react-addons-test-utils": "15.4.2",
     "reactify": "1.1.1",
     "skin-deep": "0.16.0",
-    "ts-node": "^5.0.1"
+    "ts-jest": "19.0.2",
+    "ts-node": "5.0.1",
+    "tsify": "3.0.4",
+    "typescript": "2.7.2"
   },
   "dependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.170",
@@ -105,6 +109,21 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "browserify": {
+    "extensions": [
+      ".js",
+      ".es6",
+      ".jsx",
+      ".hbs",
+      ".ts",
+      ".tsx"
+    ],
+    "plugin": [
+      [
+        "tsify"
+      ]
     ]
   }
 }
