--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "git+https://github.com/imeredith/js-builder.git#typescript_support",
+    "@jenkins-cd/js-builder": "0.0.63",
     "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
     "@types/react": "15.6.14",
