--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -29,6 +29,8 @@
     "@jenkins-cd/js-builder": "0.0.63",
     "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
+    "@types/bluebird": "3.5.0",
+    "@types/bluebird-global": "3.5.0",
     "@types/react": "15.6.14",
     "babel": "6.5.2",
     "babel-core": "6.17.0",
