--- a/blueocean-material-icons/package.json
+++ b/blueocean-material-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jenkins-cd/blueocean-material-icons",
-  "version": "0.0.6",
+  "version": "0.0.7-thor",
   "description": "Material icons for the Jenkins Design Language",
   "main": "dist/js/components/index.js",
   "scripts": {
@@ -15,15 +15,16 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
+    "babel-plugin-transform-object-assign": "6.22.0",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-addons-test-utils": "15.4.2",
-    "mocha": "4.0.1",
     "chai": "4.1.2",
     "enzyme": "2.5.1",
+    "mocha": "4.0.1",
+    "react": "15.4.2",
+    "react-addons-test-utils": "15.4.2",
+    "react-dom": "15.4.2",
     "sinon": "4.1.2"
   }
 }
