--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jenkins-cd/design-language",
   "jdlName": "jenkins-design-language",
-  "version": "0.0.161",
+  "version": "0.0.162-assign",
   "description": "Styles, assets, and React classes for Jenkins Design Language",
   "main": "dist/js/components/index.js",
   "scripts": {
@@ -50,7 +50,7 @@
     ]
   },
   "dependencies": {
-    "@jenkins-cd/blueocean-material-icons": "0.0.6",
+    "@jenkins-cd/blueocean-material-icons": "0.0.7-thor",
     "@jenkins-cd/js-modules": "0.0.10",
     "linkifyjs": "2.1.4",
     "lodash.debounce": "4.0.8",
@@ -66,6 +66,7 @@
     "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.35.3",
     "babel-eslint": "7.0.0",
+    "babel-plugin-transform-object-assign": "6.22.0",
     "babel-polyfill": "6.16.0",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
