--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -84,6 +84,7 @@
     "gulp-less": "3.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.6.0",
+    "gulp-typescript": "4.0.1",
     "jest": "19.0.2",
     "less": "2.7.2",
     "nock": "9.0.14",
