--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -44,11 +44,7 @@
     "type": "git",
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/js/**/*.{js,jsx}"
-    ]
-  },
+  
   "dependencies": {
     "@jenkins-cd/blueocean-material-icons": "0.0.6",
     "@jenkins-cd/js-modules": "0.0.10",
@@ -88,12 +84,17 @@
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "2.1.1",
     "gulp-svgmin": "1.2.3",
+    "gulp-typescript": "4.0.1",
     "harp": "0.24.0",
+    "jest": "19.0.2",
     "less": "2.7.2",
     "normalize.css": "5.0.0",
     "octicons": "4.4.0",
     "react-addons-test-utils": "15.4.2",
     "run-sequence": "1.2.2",
+    "ts-jest": "19.0.2",
+    "tsify": "3.0.4",
+    "typescript": "2.7.2",
     "watchify": "3.7.0"
   },
   "jenkinscd": {
@@ -104,6 +105,37 @@
       "react-addons-css-transition-group",
       "react-dom",
       "react-router"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/js/**/*.{js,jsx}"
+    ], "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js",
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "browserify": {
+    "extensions": [
+      ".js",
+      ".es6",
+      ".jsx",
+      ".hbs",
+      ".ts",
+      ".tsx"
+    ],
+    "plugin": [
+      [
+        "tsify"
+      ]
     ]
   }
 }
