--- a/blueocean-dashboard/package.json
+++ b/blueocean-dashboard/package.json
@@ -26,9 +26,12 @@
   },
   "devDependencies": {
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
-    "@jenkins-cd/js-builder": "0.0.62",
+    "@jenkins-cd/js-builder": "0.0.63",
     "@jenkins-cd/js-builder-jest": "0.0.4",
     "@kadira/storybook": "2.20.1",
+    "@types/bluebird": "3.5.0",
+    "@types/bluebird-global": "3.5.0",
+    "@types/react": "15.6.14",
     "babel": "6.5.2",
     "babel-core": "6.17.0",
     "babel-eslint": "7.0.0",
@@ -43,10 +46,16 @@
     "eslint-plugin-react": "4.3.0",
     "gulp": "3.9.1",
     "gulp-mocha": "3.0.1",
+    "jest": "19.0.2",
+    "jest-cli": "19.0.2",
     "mocha": "3.1.0",
     "react-addons-test-utils": "15.4.2",
     "reactify": "1.1.1",
-    "skin-deep": "0.16.0"
+    "skin-deep": "0.16.0",
+    "ts-jest": "19.0.2",
+    "ts-node": "5.0.1",
+    "tsify": "3.0.4",
+    "typescript": "2.7.2"
   },
   "dependencies": {
     "@jenkins-cd/blueocean-core-js": "0.0.171",
@@ -88,6 +97,35 @@
       "react-redux@any",
       "react-router@any",
       "redux-thunk@any"
+    ]
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "<rootDir>/node_modules/ts-jest/preprocessor.js",
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "browserify": {
+    "extensions": [
+      ".js",
+      ".es6",
+      ".jsx",
+      ".hbs",
+      ".ts",
+      ".tsx"
+    ],
+    "plugin": [
+      [
+        "tsify"
+      ]
     ]
   }
 }
