--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jenkins-cd/design-language",
   "jdlName": "jenkins-design-language",
-  "version": "0.0.161",
+  "version": "0.0.161-xxx2",
   "description": "Styles, assets, and React classes for Jenkins Design Language",
   "main": "dist/js/components/index.js",
   "scripts": {
@@ -44,9 +44,9 @@
     "type": "git",
     "url": "https://github.com/jenkinsci/blueocean-plugin.git"
   },
-  
+
   "dependencies": {
-    "@jenkins-cd/blueocean-material-icons": "0.0.6",
+    "@jenkins-cd/blueocean-material-icons": "0.0.6-xxx",
     "@jenkins-cd/js-modules": "0.0.10",
     "linkifyjs": "2.1.4",
     "lodash.debounce": "4.0.8",
