Revert "JENKINS-48357# Fix jira-plugin binary compatibility issue (#1704)"
This reverts commit 1d4da19a4f9650a25b131fa4a366f71a3d6e1f85.

--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -95,7 +95,12 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>blueocean-pipeline-editor</artifactId>
         </dependency>
-        
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>blueocean-jira</artifactId>
+        </dependency>
+
         <!-- Bundled plugins for improved out of the box experience -->
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
