--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -64,6 +64,7 @@
     "@kadira/storybook": "2.20.1",
     "@types/bluebird": "3.5.0",
     "@types/bluebird-global": "3.5.0",
+    "@types/node": "^9.6.4",
     "babel-eslint": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-polyfill": "6.16.0",
@@ -124,21 +125,6 @@
       "jsx",
       "json",
       "node"
-    ]
-  },
-  "browserify": {
-    "extensions": [
-      ".js",
-      ".es6",
-      ".jsx",
-      ".hbs",
-      ".ts",
-      ".tsx"
-    ],
-    "plugin": [
-      [
-        "tsify"
-      ]
     ]
   }
 }
