--- a/blueocean-bitbucket-pipeline/pom.xml
+++ b/blueocean-bitbucket-pipeline/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>blueocean-parent</artifactId>
     <groupId>io.jenkins.blueocean</groupId>
-    <version>1.6.0-beta-1-SNAPSHOT</version>
+    <version>1.6.0-beta-1</version>
   </parent>
 
   <name>Bitbucket Pipeline for Blue Ocean</name>
@@ -74,7 +74,7 @@
     <dependency>
       <groupId>io.jenkins.blueocean</groupId>
       <artifactId>blueocean-rest-impl</artifactId>
-      <version>1.6.0-beta-1-SNAPSHOT</version>
+      <version>1.6.0-beta-1</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
