--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -36,7 +36,6 @@
   },
   "dependencies": {
     "@jenkins-cd/design-language": "0.0.162",
-    "@jenkins-cd/js-extensions": "0.0.42",
     "@jenkins-cd/js-modules": "0.0.10",
     "@jenkins-cd/logging": "0.0.6",
     "@jenkins-cd/sse-gateway": "0.0.21",
@@ -61,10 +60,11 @@
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/js-builder": "0.0.63",
     "@jenkins-cd/js-builder-jest": "0.0.4",
+    "@jenkins-cd/js-extensions": "0.0.44",
     "@kadira/storybook": "2.20.1",
     "@types/bluebird": "3.5.0",
     "@types/bluebird-global": "3.5.0",
-    "@types/node": "^9.6.4",
+    "@types/node": "9.6.4",
     "babel-eslint": "7.0.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-polyfill": "6.16.0",
