--- a/jenkins-design-language/package.json
+++ b/jenkins-design-language/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@jenkins-cd/js-builder": "0.0.63",
     "@jenkins-cd/js-builder-jest": "0.0.4",
+    "@jenkins-cd/js-extensions": "0.0.44",
     "@kadira/storybook": "2.35.3",
     "babel-eslint": "7.0.0",
     "babel-polyfill": "6.16.0",
