--- a/blueocean/pom.xml
+++ b/blueocean/pom.xml
@@ -99,6 +99,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>blueocean-jira</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- Bundled plugins for improved out of the box experience -->
