--- a/blueocean-core-js/package.json
+++ b/blueocean-core-js/package.json
@@ -40,6 +40,7 @@
     "@jenkins-cd/logging": "0.0.6",
     "@jenkins-cd/sse-gateway": "0.0.21",
     "@jenkins-cd/storage": "0.0.6",
+    "@jenkins-cd/js-extensions": "0.0.44",
     "bluebird": "3.5.0",
     "cd": "0.3.3",
     "i18next": "3.5.2",
@@ -60,7 +61,6 @@
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/js-builder": "0.0.63",
     "@jenkins-cd/js-builder-jest": "0.0.4",
-    "@jenkins-cd/js-extensions": "0.0.44",
     "@kadira/storybook": "2.20.1",
     "@types/bluebird": "3.5.0",
     "@types/bluebird-global": "3.5.0",
@@ -87,6 +87,7 @@
     "gulp-sourcemaps": "1.6.0",
     "gulp-typescript": "4.0.1",
     "jest": "19.0.2",
+    "jest-cli": "19.0.2",
     "less": "2.7.2",
     "nock": "9.0.14",
     "react-addons-test-utils": "15.4.2",
