--- a/blueocean-pipeline-editor/package.json
+++ b/blueocean-pipeline-editor/package.json
@@ -26,7 +26,6 @@
     "@jenkins-cd/eslint-config-jenkins": "0.0.2",
     "@jenkins-cd/js-builder": "0.0.63",
     "@jenkins-cd/js-builder-jest": "0.0.4",
-    "@jenkins-cd/js-extensions": "0.0.44",
     "@kadira/storybook": "2.20.1",
     "@types/bluebird-global": "3.5.5",
     "@types/react": "15.6.14",
@@ -47,6 +46,7 @@
     "gulp-mocha": "2.2.0",
     "gulp-typescript": "4.0.1",
     "jest": "19.0.2",
+    "jest-cli": "19.0.2",
     "jsdom": "7.2.2",
     "mocha": "2.4.5",
     "nock": "8.0.0",
@@ -59,6 +59,7 @@
     "@jenkins-cd/blueocean-core-js": "0.0.171",
     "@jenkins-cd/design-language": "0.0.162",
     "@jenkins-cd/js-modules": "0.0.10",
+    "@jenkins-cd/js-extensions": "0.0.44",
     "lodash.debounce": "4.0.8",
     "mobx": "2.6.0",
     "mobx-react": "3.5.7",
