Re-write  folder.js tests in Java.

--- a/acceptance-tests/runner/runtime-plugins/pom.xml
+++ b/acceptance-tests/runner/runtime-plugins/pom.xml
@@ -7,7 +7,7 @@
   <version>2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>Blue Ocean Parent</name>
+  <name>Blue Ocean ATH Parent</name>
 
   <modules>
     <module>fake-security-realm-plugin</module>
